--- a/app/views/hyrax/base/structure.html.erb
+++ b/app/views/hyrax/base/structure.html.erb
@@ -5,10 +5,13 @@
     Having trouble? Switch to the Old Structure Manager (Legacy Version)
   </a>
 </div>
-<struct-manager
-  resource-id="<%= @change_set.id %>"
-  data-id="<%= @change_set.id %>"
-  data-class-name="<%= @change_set.model_name.plural %>"
-  data-singular-class-name="<%= @change_set.model_name.singular %>"
-  :structure="<%= @logical_order.to_json %>"
+
+<div class="lux">
+  <struct-manager
+    resource-id="<%= @change_set.id %>"
+    data-id="<%= @change_set.id %>"
+    data-class-name="<%= @change_set.model_name.plural %>"
+    data-singular-class-name="<%= @change_set.model_name.singular %>"
+    :structure="<%= @logical_order.to_json %>"
   ></struct-manager>
+</div>
