--- a/app/views/layouts/_head_tag_content.html.erb
+++ b/app/views/layouts/_head_tag_content.html.erb
@@ -21,8 +21,15 @@ signed in %>
 <!-- application css -->
 <%= stylesheet_link_tag 'application' %>
 
+<!-- Vue component js -->
+<%= vite_client_tag %>
+<%= vite_javascript_tag 'application' %>
+
+
 <!-- application js -->
 <%= javascript_include_tag 'application' %>
+
+
 
 <%= render 'shared/appearance_styles' %>
 
